--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -2,7 +2,13 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <name>Anewtodolist Config DSL Script</name>
-  <groupId>Anewtodolist</groupId>
+
+    <properties>
+        <kotlin.version>1.8.20</kotlin.version>
+    </properties>
+
+
+    <groupId>Anewtodolist</groupId>
   <artifactId>Anewtodolist_dsl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -37,25 +43,27 @@
   </pluginRepositories>
 
   <build>
-    <sourceDirectory>${basedir}</sourceDirectory>
+    <sourceDirectory></sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
         <groupId>org.jetbrains.kotlin</groupId>
         <version>${kotlin.version}</version>
 
-        <configuration/>
+        <configuration>
+            <jvmTarget>1.8</jvmTarget>
+        </configuration>
         <executions>
           <execution>
             <id>compile</id>
-            <phase>process-sources</phase>
+            <phase>compile</phase>
             <goals>
               <goal>compile</goal>
             </goals>
           </execution>
           <execution>
             <id>test-compile</id>
-            <phase>process-test-sources</phase>
+            <phase>test-compile</phase>
             <goals>
               <goal>test-compile</goal>
             </goals>
@@ -100,5 +108,16 @@
       <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains.kotlin</groupId>
+          <artifactId>kotlin-stdlib-jdk8</artifactId>
+          <version>${kotlin.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jetbrains.kotlin</groupId>
+          <artifactId>kotlin-test</artifactId>
+          <version>${kotlin.version}</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 </project>
