--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -2,13 +2,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <name>Anewtodolist Config DSL Script</name>
-
-    <properties>
-        <kotlin.version>1.8.20</kotlin.version>
-    </properties>
-
-
-    <groupId>Anewtodolist</groupId>
+  <groupId>Anewtodolist</groupId>
   <artifactId>Anewtodolist_dsl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -43,27 +37,25 @@
   </pluginRepositories>
 
   <build>
-    <sourceDirectory></sourceDirectory>
+    <sourceDirectory>${basedir}</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
         <groupId>org.jetbrains.kotlin</groupId>
         <version>${kotlin.version}</version>
 
-        <configuration>
-            <jvmTarget>1.8</jvmTarget>
-        </configuration>
+        <configuration/>
         <executions>
           <execution>
             <id>compile</id>
-            <phase>compile</phase>
+            <phase>process-sources</phase>
             <goals>
               <goal>compile</goal>
             </goals>
           </execution>
           <execution>
             <id>test-compile</id>
-            <phase>test-compile</phase>
+            <phase>process-test-sources</phase>
             <goals>
               <goal>test-compile</goal>
             </goals>
@@ -108,16 +100,5 @@
       <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
-      <dependency>
-          <groupId>org.jetbrains.kotlin</groupId>
-          <artifactId>kotlin-stdlib-jdk8</artifactId>
-          <version>${kotlin.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.jetbrains.kotlin</groupId>
-          <artifactId>kotlin-test</artifactId>
-          <version>${kotlin.version}</version>
-          <scope>test</scope>
-      </dependency>
   </dependencies>
 </project>
